--- a/app/blocks/form-elements/form-checkradio.scss
+++ b/app/blocks/form-elements/form-checkradio.scss
@@ -339,6 +339,22 @@
       border-color: $color-basic;
       background-color: transparent;
     }
+
+    #{$check}_box3 & {
+      width: 22px;
+      height: 22px;
+      border-color: $color-basic;
+      background-color: transparent;
+    }
+
+    #{$check}_box3:hover & {
+      background-color: transparent;
+    }
+
+    #{$check}_box3 #{$check}__input:checked ~ & {
+      border-color: $color-basic;
+      background-color: transparent;
+    }
   }
 
   &__icon {
@@ -359,6 +375,14 @@
       top: -2px;
       left: 1px;
       fill: $color-black;
+    }
+
+    #{$check}_box3 & {
+      width: 22px;
+      height: 18px;
+      top: 0;
+      left: 4px;
+      fill: $color-check-green-2;
     }
   }
 
