--- a/app/blocks/link/link.scss
+++ b/app/blocks/link/link.scss
@@ -125,6 +125,14 @@
         padding-left: 35px;
       }
     }
+
+    &_pl22 {
+      padding-left: 22px;
+
+      @include screen('sm') {
+        padding-left: 20px;
+      }
+    }
   }
 
   &_forward {
@@ -202,7 +210,6 @@
     transition: transform $ease-main;
 
     &_download {
-
       #{$b}_download-small & {
         width: 15px;
         height: 15px;
@@ -439,7 +446,6 @@
     color: $color-white;
 
     #{$b} {
-
       &__text {
         position: relative;
         z-index: 2;
