--- a/app/blocks/offer-info/offer-info.scss
+++ b/app/blocks/offer-info/offer-info.scss
@@ -275,14 +275,14 @@
 
 .offer-info-radio {
   cursor: pointer;
-  display: block;
+  display: flex;
   width: 100%;
 
   input {
     display: none;
   }
 
-  input:checked ~ .offer-info,&:hover .offer-info {
+  input:checked ~ .offer-info,&:hover .offer-info, input:checked ~ .offer-option,&:hover .offer-option {
     background-color: $color-bg;
   }
 }
