--- a/app/blocks/offer-select/offer-select.scss
+++ b/app/blocks/offer-select/offer-select.scss
@@ -145,6 +145,7 @@
 
   &__item {
     min-height: 83px;
+    display: flex;
 
     &:not(:last-child) {
       border-bottom: 1px solid $color-border-light;
