--- a/app/pages/account-settings/account-settings.pug
+++ b/app/pages/account-settings/account-settings.pug
@@ -104,8 +104,8 @@ block content
                     +form-box('Employee position')
                       +input(type="text" name="employeePosition" value="Art-director" placeholder="Employee position")
             +form-section._mg80
-              +form-section-checker()._mgt-20(data-form-element="details-checker")
-                +b.LABEL.checkbox
+              +form-section-checker()._block._mgt-20(data-form-element="details-checker")
+                +b.LABEL.checkbox_v2
                   +e.INPUT.input(name="isCompaty" value="1" type="checkbox" data-checker="details")
                   +e.SPAN.box
                     +icon('check').__icon
