--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -6,6 +6,11 @@ block head
 block content
   +b.sitemap
     .container
+      +page-title._small Страницы (обновление от 26.2.2020)
+      br
+      +e.list
+        +link(href="space-v2.html") One Space (space-v2.html)
+        +link(href="signup-terms.html") Sign Up update (signup-terms.html)
       +page-title._small Попапы (обновление от 27.12.2019)
       br
       +e.list
