--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -175,6 +175,7 @@ $color-input-dark: #313339;
 $color-new-disabled: #b4bbc6;
 $color-new-input: #515964;
 $color-gray-lightest: #adbabd;
+$color-check-green-2: #34d9cd;
 
 // ##########
 // Transitions
