--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -43,6 +43,18 @@
     }
   }
 
+  &_def-plchldr {
+    padding-bottom: 10px;
+
+    &:-ms-input-placeholder {
+      color: $color-placeholder;
+    }
+
+    &::placeholder {
+      color: $color-placeholder;
+    }
+  }
+
   &_fz17 {
     @include text-mid;
 
@@ -293,6 +305,11 @@
       line-height: (26 / 15);
       color: $color-basic-light;
     }
+  }
+
+  &.is-disabled {
+    opacity: .5;
+    pointer-events: none;
   }
 }
 
