--- a/app/blocks/info-slide/info-slide.scss
+++ b/app/blocks/info-slide/info-slide.scss
@@ -54,8 +54,7 @@
         transform: translate3d(0, 40px, 0);
       }
 
-      .swiper-slide-active &,
-      .swiper-slide-duplicate-active & {
+      .swiper-slide-active &, .swiper-slide-duplicate-active & {
         transform: translate3d(0, 0, 0);
       }
 
