--- a/app/blocks/scroll-form/scroll-form-v2.pug
+++ b/app/blocks/scroll-form/scroll-form-v2.pug
@@ -1,4 +1,4 @@
-mixin scroll-form()
+mixin scroll-form-v2()
   - var offers = getData('offer-select.json')
   +sidebar
     +b.FORM.scroll-form&attributes(attributes)(data-first-step="step0" data-validated-form)
@@ -7,12 +7,11 @@ mixin scroll-form()
         +offer-select(true).offer-select_right.__select
           each item in offers
             +offer-select-item(item)
-        +e.P.text Including VAT and Service Fee
-        +input-number('count').__counter
+        +e.P.note_fz14._dark <i>* </i> Excluding VAT
+        +input-number('count', 1).__counter.is-disabled
         +e.buttons
           +button('a')(href="#" data-next-step="step1")._short.__button.js-stp-form-next Request Reservation
           +button('a')(href="#popup-arrange-viewing")._border._border_bg-white._short.__button.js-popup-top Arrange a Viewing
-        +e.P.note <i>* </i> Utility bills and other services are paid separately
       +e.section_pb.hide(data-step="step1")
         +e.H4.subtitle
           +link-icon('select-arrow', 'a')._back._back_pl22._bold._no-shadow.__button.js-stp-form-next(href="#" data-next-step="step0") Back
@@ -36,7 +35,7 @@ mixin scroll-form()
               +input(type="text" name="phoneCode" value="+44" placeholder="+__")
           +e.phone_number
             +form-box('', '')
-              +input(type="tel" name="phoneNumber" placeholder="Your phone number").input_def-plchldr
+              +input(type="tel" name="phoneNumber" placeholder="Your phone number" required).input_def-plchldr
         +e.buttons
           +button('button', true)(type="submit" data-callback="serverSave" data-final-step="step2")._short.__button.js-stp-form-final Confirm Request
       +e.section_pb.hide(data-step="step2")
