--- a/app/components/content/content.pug
+++ b/app/components/content/content.pug
@@ -6,6 +6,14 @@ mixin content()
       +e.column_aside.hide-md(data-sticky-parent)
         +scroll-form
 
+mixin content-v2()
+  +b.SECTION.content&attributes(attributes)
+    .container.container_content
+      +e.column_main
+        block
+      +e.column_aside.hide-md(data-sticky-parent)
+        +scroll-form-v2
+
 mixin content-origin()
   +b.SECTION.content&attributes(attributes)
     block
