popup cancel booking

--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -6,6 +6,11 @@ block head
 block content
   +b.sitemap
     .container
+      +page-title._small Попапы (обновление от 03.03.2020)
+      br
+      +e.list
+        +link(href="#popup-cancel-booking").js-popup-top Popup cancel booking
+      br
       +page-title._small Страницы (обновление от 26.2.2020)
       br
       +e.list
@@ -24,7 +29,7 @@ block content
       br
       +e.list
         +link(href="system3.html") SpacePool - System Messages 3 (system3.html)
-
+      br
       +page-title._small Страницы
       +e.list
         +link(href="ui-kit.html") UI-kit (ui-kit.html)
@@ -177,3 +182,4 @@ block popups
   +popup-new-offer-v2#popup-new-offer-h-v2
   +popup-payment-summary#popup-payment-summary
   +popup-payment-summary-guest#popup-payment-summary-guest
+  +popup-cancel-booking#popup-cancel-booking
