On the page signup-terms.html, the checkbox on top was replaced with a standard

--- a/app/pages/signup/signup-terms.pug
+++ b/app/pages/signup/signup-terms.pug
@@ -16,10 +16,10 @@ block content
         +col({ xl: 8, lg: 12})
           +form()(data-validated-form)
             +form-section-checker()._block._mt62._mb45(data-form-element="registration-checker")
-              +b.LABEL.checkbox_box3._fz17
+              +b.LABEL.checkbox._fz17
                 +e.INPUT.input(name="terms" value="1" type="checkbox" data-checker="registration")
                 +e.SPAN.box
-                  +icon('check3').__icon
+                  +icon('check').__icon
                 +e.SPAN.content I agree with Spacepool&nbsp;
                   +link()._underline(href="#") Terms and conditions
             +form-section()._mg43._dis.is-disabled(data-checker-target="registration" data-form-element="socials")
