--- a/app/pages/space/space-v2.pug
+++ b/app/pages/space/space-v2.pug
@@ -225,6 +225,8 @@ block content
 block panels
   +main-menu
   +offer-panel.hide-from-md
+  .reservation-request-panel(data-rr-wrapper-block="panel")
 
 block popups
   +popup-arrange-viewing#popup-arrange-viewing
+  +reservation-request#reservation-request
