--- a/app/blocks/offer-item/offer-item.pug
+++ b/app/blocks/offer-item/offer-item.pug
@@ -18,4 +18,4 @@ mixin offer-item(data)
               li First and last months for offices are paid before letting start
         +e.buttons
           +button('a')(href="#popup-arrange-viewing")._thin-border._thin-border_smaller._smaller._wide.__button.js-popup-top Arrange a viewing
-          +button('a')._smaller._wide.__button(href="#") Request Reservation
+          +button('a')._smaller._wide.__button(href="#reservation-request" data-rr-wrapper-target="panel" data-rr-need-to-show="true") Request Reservation
