--- a/app/blocks/scroll-form/scroll-form.scss
+++ b/app/blocks/scroll-form/scroll-form.scss
@@ -1,4 +1,5 @@
 .scroll-form {
+  position: relative;
   display: block;
   width: 100%;
   box-sizing: border-box;
@@ -191,6 +192,26 @@
       @include screen('sm') {
         margin-bottom: 45px;
       }
+    }
+  }
+
+  &__panel {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity $ease-main;
+    transform: translate3d(0, 0, 0);
+    z-index: 4;
+
+    &.is-show {
+      pointer-events: auto;
+      opacity: 1;
+      visibility: visible;
     }
   }
 }
