--- a/app/components/reservation-request/reservation-request.pug
+++ b/app/components/reservation-request/reservation-request.pug
@@ -22,7 +22,7 @@ mixin reservation-request()
                 -}
           +form-section-wrapper._mg44
             +form-box('Your phone number', '', 'label')
-              +input(type="tel" name="phone" value="+4476896898983" placeholder="Your phone number" data-tel-number)
+              +input(type="tel" name="phone" placeholder="Your phone number" data-tel-number required)
           +e.buttons
             +button('button', true)(type="submit" data-callback="serverSave" data-final-step="step1")._short._wide.__button.js-stp-form-final Confirm Request
       +form-section._mgb0.hide(data-step="step1")
