--- a/app/components/popup-new-offer/popup-new-offer-v2.pug
+++ b/app/components/popup-new-offer/popup-new-offer-v2.pug
@@ -12,14 +12,16 @@ mixin popup-new-offer-v2()
           p To: 30 October 2019
       +e.new
         +form.__form#new-offer-form
-          +e.info_nowrap._mt50
+          +e.info_nowrap._nowrap_sm-up._mt50
             +e.info-cell._big._no-sm-top
               +form-section-wrapper
-                +form-box('New rent')
-                  +input.input_dark(type="text" name="price" placeholder="New rent" value="£ 690.00")
+                +form-box('New price per unit:')
+                  +input.input_dark(type="text" name="price" placeholder="New price per unit:" value="£ 690.00")
             +e.info-cell._no-sm-top
               +form-section-wrapper._aie._h100p
                 +e.imitation_tar Per month
+            +e.info-cell._auto._fxe._sm-wide._sm-top10
+              +e.text_big._dark * Excluding VAT
           +e.info._mt50
             +e.info-cell
               +form-section-wrapper
