--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -6,6 +6,10 @@ block head
 block content
   +b.sitemap
     .container
+      +page-title._small Попапы (обновление от 23.03.2020)
+      br
+      +e.list
+        +link(href="#popup-new-offer-h-v2").js-popup Popup New Tenancy offer update
       +page-title._small Попапы (обновление от 03.03.2020)
       br
       +e.list
@@ -21,7 +25,6 @@ block content
       +e.list
         +link(href="#popup-cancelation-contract-unsigned").js-popup-top Popup cancel request
         +link(href="#popup-cancelation-contract").js-popup-top Popup cancel contract
-        +link(href="#popup-new-offer-h-v2").js-popup Popup New Tenancy offer update
         +link(href="#popup-payment-summary").js-popup Popup Payment Summary
         +link(href="#popup-payment-summary-guest").js-popup Popup Payment Summary Guest
 
