request-reservation popup

--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -484,6 +484,14 @@
       }
     }
 
+    &_mg58 {
+      margin-bottom: 58px;
+
+      @include screen('sm') {
+        margin-bottom: 50px;
+      }
+    }
+
     &_mg62 {
       margin-bottom: 62px;
 
@@ -1038,6 +1046,12 @@
     &_mg44 {
       &:not(:last-child) {
         margin-bottom: 44px;
+      }
+    }
+
+    &_mg50 {
+      &:not(:last-child) {
+        margin-bottom: 50px;
       }
     }
 
@@ -2474,6 +2488,14 @@
       margin-bottom: 80px;
 
       @include screen('sm') {
+        margin-bottom: 45px;
+      }
+    }
+
+    &_v2 {
+      margin-top: -15px;
+
+      &:not(:last-child) {
         margin-bottom: 45px;
       }
     }
