--- a/app/blocks/button/button.scss
+++ b/app/blocks/button/button.scss
@@ -689,6 +689,12 @@
       }
     }
   }
+
+  &.is-rr-clone {
+    margin: 0;
+    z-index: 8;
+    pointer-events: auto;
+  }
 }
 
 .button-plus-thin {
