--- a/app/pages/space/space-v2.pug
+++ b/app/pages/space/space-v2.pug
@@ -79,7 +79,7 @@ block content
                       +e.buttons
                         +button-heart._gray._small.__button._heart.js-heart.hide-sm
                         +button('a')._thin-border._thin-border_smaller._smaller.__button(href="#some") Arrange a viewing
-                        +button('a')._smaller.__button(href="#some") Request Reservation
+                        +button('a')._smaller.__button(href="#reservation-request-popup" data-rr-wrapper-target="popup" data-rr-need-to-show="true" data-rr-popup="true" data-rr-button-clone="true") Request Reservation
                       +e.available AVIALABLE NOW
                     +content-zone._small.__content
                       h4 Hot desk with Workshops Floor 6
@@ -102,7 +102,7 @@ block content
                       +e.buttons
                         +button-heart._gray._small.__button._heart.js-heart.hide-sm
                         +button('a')._thin-border._thin-border_smaller._smaller.__button(href="#") Arrange a viewing
-                        +button('a')._smaller.__button(href="#") Request Reservation
+                        +button('a')._smaller.__button(href="#reservation-request-popup" data-rr-wrapper-target="popup" data-rr-need-to-show="true" data-rr-popup="true" data-rr-button-clone="true") Request Reservation
                       +e.available AVIALABLE NOW
                     +content-zone._small.__content
                       h4 Hot desk with Workshops Floor 7
@@ -125,7 +125,7 @@ block content
                       +e.buttons
                         +button-heart._gray._small.__button._heart.js-heart.hide-sm
                         +button('a')._thin-border._thin-border_smaller._smaller.__button(href="#") Arrange a viewing
-                        +button('a')._smaller.__button(href="#") Request Reservation
+                        +button('a')._smaller.__button(href="#reservation-request-popup" data-rr-wrapper-target="popup" data-rr-need-to-show="true" data-rr-popup="true" data-rr-button-clone="true") Request Reservation
                       +e.available AVIALABLE FROM:&nbsp;
                         b 6 July 2019
                     +content-zone._small.__content
@@ -151,7 +151,7 @@ block content
                       +e.buttons
                         +button-heart._gray._small.__button._heart.js-heart.hide-sm
                         +button('a')._thin-border._thin-border_smaller._smaller.__button(href="#") Arrange a viewing
-                        +button('a')._smaller.__button(href="#") Request Reservation
+                        +button('a')._smaller.__button(href="#reservation-request-popup" data-rr-wrapper-target="popup" data-rr-need-to-show="true" data-rr-popup="true" data-rr-button-clone="true") Request Reservation
                       +e.available NOT AVAILABLE
                     +content-zone._small.__content
                       h4 Hot desk with Workshops Floor 6
@@ -168,7 +168,7 @@ block content
                       +e.buttons
                         +button-heart._gray._small.__button._heart.js-heart.hide-sm
                         +button('a')._thin-border._thin-border_smaller._smaller.__button(href="#") Arrange a viewing
-                        +button('a')._smaller.__button(href="#") Request Reservation
+                        +button('a')._smaller.__button(href="#reservation-request-popup" data-rr-wrapper-target="popup" data-rr-need-to-show="true" data-rr-popup="true" data-rr-button-clone="true") Request Reservation
                       +e.available AVIALABLE NOW
                     +content-zone._small.__content
                       h4 Hot desk with Workshops Floor 6
@@ -187,7 +187,7 @@ block content
                       +e.buttons
                         +button-heart._gray._small.__button._heart.js-heart.hide-sm
                         +button('a')._thin-border._thin-border_smaller._smaller.__button(href="#") Arrange a viewing
-                        +button('a')._smaller.__button(href="#") Request Reservation
+                        +button('a')._smaller.__button(href="#reservation-request-popup" data-rr-wrapper-target="popup" data-rr-need-to-show="true" data-rr-popup="true" data-rr-button-clone="true") Request Reservation
                       +e.available AVIALABLE NOW
                     +content-zone._small.__content
                       h4 Hot desk with Workshops Floor 6
@@ -206,7 +206,7 @@ block content
                       +e.buttons
                         +button-heart._gray._small.__button._heart.js-heart.hide-sm
                         +button('a')._thin-border._thin-border_smaller._smaller.__button(href="#") Arrange a viewing
-                        +button('a')._smaller.__button(href="#") Request Reservation
+                        +button('a')._smaller.__button(href="#reservation-request-popup" data-rr-wrapper-target="popup" data-rr-need-to-show="true" data-rr-popup="true" data-rr-button-clone="true") Request Reservation
                       +e.available NOT AVAILABLE
                     +content-zone._small.__content
                       h4 Hot desk with Workshops Floor 6
@@ -226,7 +226,9 @@ block panels
   +main-menu
   +offer-panel.hide-from-md
   .reservation-request-panel(data-rr-wrapper-block="panel")
+  .reservation-request-popup(data-rr-wrapper-block="popup")
 
 block popups
   +popup-arrange-viewing#popup-arrange-viewing
   +reservation-request#reservation-request
+  +reservation-request-popup#reservation-request-popup
