--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -2283,6 +2283,10 @@
       margin-top: 30px;
     }
 
+    &_block {
+      display: block;
+    }
+
     &_btn {
       &:not(:first-child) {
         margin-top: 40px;
