fix datepicker in reservation request popup

--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -407,7 +407,7 @@
   }
 }
 
-.datepicker_fancybox {
+.datepicker_fancybox, .is-rr-popup-show .datepicker {
   position: fixed;
   z-index: 100000;
 }
