add text in payment form popup

--- a/app/components/popup-payment-form/popup-payment-form.pug
+++ b/app/components/popup-payment-form/popup-payment-form.pug
@@ -142,4 +142,8 @@ mixin popup-payment-form()
                     +e.text_gray._block._mt4 VAT included
                 +col({xl: 9, sm: 14})
                   +button('button')._short._wide.__button_mt4(type="submit") Pay now
+                +col({xl: 14})(data-form-element="debit")
+                  +e.text_block
+                    p Once you have signed the amendment, you will need to update your payment page for SEPA/BACS direct debits where your users enter their bank account information to include the following sentence:
+                    p Payments by GoCardless. Read the GoCardless privacy policy here (<a class="link link_gray link_bordered" href="https://gocardless.com/privacy">https://gocardless.com/privacy</a>).
             block
