--- a/app/components/popup-payment-form/popup-payment-form.scss
+++ b/app/components/popup-payment-form/popup-payment-form.scss
@@ -2,6 +2,15 @@
   $b: &;
 
   .popup {
+    &__scrollblock {
+      @include screen('md') {
+        max-height: 94vh;
+      }
+
+      @include screen('sm') {
+        max-height: 100vh;
+      }
+    }
 
     &__inner-content {
       padding: 110px 0 60px;
