--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -6,6 +6,11 @@ block head
 block content
   +b.sitemap
     .container
+      +page-title._small Попапы (обновление от 30.04.2020)
+      br
+      +e.list
+        +link(href="#popup-payment-form").js-popup-top Popup payment form
+      br
       +page-title._small Попапы (обновление от 23.03.2020)
       br
       +e.list
